--- a/app/src/main/res/layout/item_designations_list.xml
+++ b/app/src/main/res/layout/item_designations_list.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
         <variable
             name="modelResponse"
-            type="com.incon.service.apimodel.components.userslistofservicecenters.UsersListOfServiceCenters" />
+            type="com.incon.service.apimodel.components.adddesignation.DesignationResponse" />
     </data>
 
     <RelativeLayout
@@ -18,6 +17,7 @@
         <TextView
             style="@style/BothWrap"
             android:layout_marginTop="@dimen/margin_8"
+            android:text="@={modelResponse.name}"
             android:textColor="@color/black"
             android:textSize="12.4sp" />
 
