--- a/app/src/main/res/layout/item_users_list.xml
+++ b/app/src/main/res/layout/item_users_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -18,6 +17,7 @@
         <TextView
             style="@style/BothWrap"
             android:layout_marginTop="@dimen/margin_8"
+            android:text="@={usersListOfServiceCenters.name}"
             android:textColor="@color/black"
             android:textSize="12.4sp" />
 
