1. Showing empty message when list has no data

--- a/app/src/main/res/layout/activity_all_users_designations.xml
+++ b/app/src/main/res/layout/activity_all_users_designations.xml
@@ -82,6 +82,13 @@
                 android:text="@string/action_designations" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/empty_data"
+            style="@style/BothMatch"
+            android:gravity="center"
+            android:text="@string/action_no_data"
+            android:visibility="gone" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/all_users_recyclerview"
             style="@style/MatchWrap"
