1. Removed AddDesignation request object

--- a/app/src/main/res/layout/activity_add_designations.xml
+++ b/app/src/main/res/layout/activity_add_designations.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="addDesignation"
-            type="com.incon.service.dto.adddesignation.AddDesignation" />
+            type="com.incon.service.apimodel.components.adddesignation.DesignationData" />
 
         <variable
             name="addDesignationsActivity"
