--- a/app/src/main/res/layout/item_designations_list.xml
+++ b/app/src/main/res/layout/item_designations_list.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="modelResponse"
-            type="com.incon.service.apimodel.components.adddesignation.DesignationResponse" />
+            type="com.incon.service.apimodel.components.adddesignation.DesignationData" />
     </data>
 
     <RelativeLayout
