1. Add designation updation 2. Changed adduser pojo

--- a/app/src/main/res/layout/item_users_list.xml
+++ b/app/src/main/res/layout/item_users_list.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="usersListOfServiceCenters"
-            type="com.incon.service.apimodel.components.userslistofservicecenters.UsersListOfServiceCenters" />
+            type="com.incon.service.dto.adduser.AddUser" />
     </data>
 
     <RelativeLayout
