--- a/app/src/main/res/layout/activity_adduser.xml
+++ b/app/src/main/res/layout/activity_adduser.xml
@@ -28,46 +28,11 @@
                 style="@style/BothMatch"
                 android:paddingBottom="@dimen/margin_38">
 
-                <android.support.v7.widget.Toolbar
+                <include
                     android:id="@+id/toolbar"
+                    layout="@layout/tool_bar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
-                    app:contentInsetStart="0dp">
-
-                    <RelativeLayout style="@style/BothMatch">
-
-                        <android.support.v7.widget.AppCompatImageView
-                            android:id="@+id/toolbar_left_iv"
-                            android:layout_width="@dimen/margin_64"
-                            android:layout_height="@dimen/margin_64"
-                            android:layout_centerVertical="true"
-                            android:paddingEnd="@dimen/margin_25"
-                            android:paddingStart="@dimen/margin_15"
-                            android:visibility="visible"
-                            app:srcCompat="@drawable/ic_back_arrow" />
-
-                        <TextView
-                            android:id="@+id/toolbar_Title"
-                            style="@style/BothWrap"
-                            fontPath="fonts/OpenSans-Bold.ttf"
-                            android:layout_centerInParent="true"
-                            android:text="@string/action_add_user"
-                            android:textColor="@color/white"
-                            android:textSize="15.5sp" />
-
-                        <android.support.v7.widget.AppCompatImageView
-                            android:id="@+id/toolbar_delete_iv"
-                            style="@style/BothWrap"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginRight="@dimen/margin_10"
-                            app:srcCompat="@drawable/ic_option_delete" />
-
-
-                    </RelativeLayout>
-
-                </android.support.v7.widget.Toolbar>
+                    android:layout_height="56dp" />
 
 
                 <!-- name -->
