1.added spinners in status tab fragment

--- a/app/src/main/res/layout/fragment_checkup.xml
+++ b/app/src/main/res/layout/fragment_checkup.xml
@@ -20,7 +20,7 @@
                     android:id="@+id/checkup_textview"
                     style="@style/BothMatch"
                     android:gravity="center"
-                    android:text="No ReturnItems"
+                    android:text="No CheckUpItems"
                     android:visibility="gone"
                     />
 
