--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -20,7 +20,7 @@
                     android:id="@+id/payment_textview"
                     style="@style/BothMatch"
                     android:gravity="center"
-                    android:text="No ReturnItems"
+                    android:text="No PaymentItems"
                     android:visibility="gone"
                     />
 
