--- a/app/src/main/res/layout/fragment_status_tab.xml
+++ b/app/src/main/res/layout/fragment_status_tab.xml
@@ -2,9 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        style="@style/BothMatch">
 
         <android.support.design.widget.CoordinatorLayout
             android:id="@+id/main_container"
@@ -23,25 +21,36 @@
                     app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
                     <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        style="@style/BothMatch"
                         android:layout_below="@+id/appbar"
                         app:layout_collapseMode="parallax">
 
-                        <!-- spinner -->
-                        <!--<com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
-                            android:id="@+id/spinner_service"
+                        <!-- spinner service centers -->
+                        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                            android:id="@+id/spinner_service_centers"
                             style="@style/spinnerItemStyle"
                             android:layout_marginTop="@dimen/margin_10"
                             android:focusable="true"
                             app:errorEnabled="true"
                             app:met_floatingLabel="highlight"
                             app:met_textColor="@color/colorForgotPasswordHintText"
-                            app:met_textColorHint="@color/colorForgotPasswordHintText" />-->
+                            app:met_textColorHint="@color/colorForgotPasswordHintText" />
+                        <!--spinner users-->
+                        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                            android:id="@+id/spinner_users"
+                            style="@style/spinnerItemStyle"
+                            android:layout_below="@+id/spinner_service_centers"
+                            android:layout_marginTop="@dimen/margin_10"
+                            android:focusable="true"
+                            app:errorEnabled="true"
+                            app:met_floatingLabel="highlight"
+                            app:met_textColor="@color/colorForgotPasswordHintText"
+                            app:met_textColorHint="@color/colorForgotPasswordHintText" />
 
                         <android.support.design.widget.TabLayout
                             android:id="@+id/tab_layout"
                             style="@style/MatchWrap"
+                            android:layout_below="@+id/spinner_users"
                             android:layout_gravity="fill"
                             android:background="@color/colorPrimaryDark"
                             android:fillViewport="true"
