--- a/app/src/main/res/layout/fragment_status_tab.xml
+++ b/app/src/main/res/layout/fragment_status_tab.xml
@@ -24,7 +24,7 @@
                         android:layout_below="@+id/appbar"
                         app:layout_collapseMode="parallax">
 
-                        <!--   &lt;!&ndash; spinner service centers &ndash;&gt;
+                           <!-- spinner service centers -->
                            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                                android:id="@+id/spinner_service_centers"
                                style="@style/spinnerItemStyle"
@@ -34,7 +34,7 @@
                                app:met_floatingLabel="highlight"
                                app:met_textColor="@color/colorForgotPasswordHintText"
                                app:met_textColorHint="@color/colorForgotPasswordHintText" />
-                           &lt;!&ndash;spinner users&ndash;&gt;
+                         <!--  &lt;!&ndash;spinner users&ndash;&gt;
                            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                                android:id="@+id/spinner_users"
                                style="@style/spinnerItemStyle"
@@ -44,12 +44,12 @@
                                app:errorEnabled="true"
                                app:met_floatingLabel="highlight"
                                app:met_textColor="@color/colorForgotPasswordHintText"
-                               app:met_textColorHint="@color/colorForgotPasswordHintText" />
-   -->
+                               app:met_textColorHint="@color/colorForgotPasswordHintText" />-->
                         <android.support.design.widget.TabLayout
                             android:id="@+id/tab_layout"
                             style="@style/MatchWrap"
                             android:layout_gravity="fill"
+                            android:layout_below="@+id/spinner_service_centers"
                             android:background="@color/colorPrimaryDark"
                             android:fillViewport="true"
                             android:minHeight="?attr/actionBarSize"
