1. Adding service center data

--- a/app/src/main/res/layout/item_all_service_centers.xml
+++ b/app/src/main/res/layout/item_all_service_centers.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="modelResponse"
-            type="com.incon.service.apimodel.components.servicecenter.ServiceCenterResponse" />
+            type="com.incon.service.dto.addservicecenter.AddServiceCenter" />
     </data>
 
     <RelativeLayout
