--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -625,6 +625,12 @@
         <item name="android:textColor">@android:color/holo_red_dark</item>
         <item name="android:textSize">12sp</item>
     </style>
+    <style name="time_slot_buttons" parent="zerowrap">
+        <item name="android:layout_weight">1</item>
+        <item name="android:minHeight">80dp</item>
+        <item name="android:background">@drawable/btn_time_slot_selector</item>
+    </style>
+
 
 
 </resources>
