--- a/app/src/main/res/layout/custom_bottom_sheet.xml
+++ b/app/src/main/res/layout/custom_bottom_sheet.xml
@@ -8,18 +8,40 @@
             android:id="@+id/third_row"
             style="@style/BothMatch"
             android:orientation="horizontal"
+            android:paddingBottom="@dimen/margin_2"
+            android:paddingTop="@dimen/margin_2"
             android:visibility="gone" />
+
+        <View
+            android:id="@+id/third_row_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/colorAccent"
+            android:layout_marginEnd="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10" />
 
         <LinearLayout
             android:id="@+id/second_row"
             style="@style/BothMatch"
             android:orientation="horizontal"
+            android:paddingBottom="@dimen/margin_2"
+            android:paddingTop="@dimen/margin_2"
             android:visibility="gone" />
+
+        <View
+            android:id="@+id/second_row_line"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/colorAccent"
+            android:layout_marginEnd="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10" />
 
         <LinearLayout
             android:id="@+id/first_row"
             style="@style/MatchWrap"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/margin_2"
+            android:paddingTop="@dimen/margin_2">
 
         </LinearLayout>
 
