1.implemented update user api

--- a/app/src/main/res/layout/activity_addservice_center.xml
+++ b/app/src/main/res/layout/activity_addservice_center.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="upDateServiceCenter"
+            type="com.incon.service.dto.updateservicecenter.UpDateServiceCenter" />
 
         <variable
             name="addServiceCenter"
