--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -36,6 +36,7 @@
     <dimen name="margin_35">35dp</dimen>
     <dimen name="margin_38">38dp</dimen>
     <dimen name="margin_40">40dp</dimen>
+    <dimen name="margin_42">42dp</dimen>
     <dimen name="margin_45">45dp</dimen>
     <dimen name="margin_48">48dp</dimen>
     <dimen name="margin_50">50dp</dimen>
