--- a/app/src/main/res/layout/fragment_newrequest.xml
+++ b/app/src/main/res/layout/fragment_newrequest.xml
@@ -2,43 +2,38 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
+
     <RelativeLayout
         style="@style/BothMatch"
         android:background="@color/mercury">
 
-        <com.facebook.shimmer.ShimmerFrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/shimmer_view_container1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swiperefresh"
+            style="@style/BothMatch"
+            >
 
-            <android.support.v4.widget.SwipeRefreshLayout
-                android:id="@+id/swiperefresh"
-                style="@style/BothMatch">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/request_textview"
+                    style="@style/BothMatch"
+                    android:gravity="center"
+                    android:text="No RequestItems"
+                    android:visibility="gone"
+                    />
 
-                    <TextView
-                        android:id="@+id/request_textview"
-                        style="@style/BothMatch"
-                        android:gravity="center"
-                        android:text="No RequestItems"
-                        android:visibility="gone"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/request_recyclerview"
+                    style="@style/MatchWrap"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:fadeScrollbars="false"
+                    android:scrollbarSize="4dp"
+                    android:scrollbarThumbVertical="@drawable/scrollbar"
+                    android:scrollbars="vertical"/>
+            </LinearLayout>
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/request_recyclerview"
-                        style="@style/MatchWrap"
-                        android:layout_marginTop="@dimen/margin_10"
-                        android:fadeScrollbars="false"
-                        android:scrollbarSize="4dp"
-                        android:scrollbarThumbVertical="@drawable/scrollbar"
-                        android:scrollbars="vertical"/>
-                </LinearLayout>
-
-            </android.support.v4.widget.SwipeRefreshLayout>
-        </com.facebook.shimmer.ShimmerFrameLayout>
-
+        </android.support.v4.widget.SwipeRefreshLayout>
     </RelativeLayout>
 </layout>
