--- a/app/src/main/res/layout/fragment_newrequest.xml
+++ b/app/src/main/res/layout/fragment_newrequest.xml
@@ -23,6 +23,25 @@
                     android:text="No RequestItems"
                     android:visibility="gone"
                     />
+             <!--   <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/effect_shimmer"
+                    style="@style/BothMatch">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <include layout="@layout/item_shimmer_view"/>
+
+                        <include layout="@layout/item_shimmer_view"/>
+
+                        <include layout="@layout/item_shimmer_view"/>
+
+                        <include layout="@layout/item_shimmer_view"/>
+
+                    </LinearLayout>
+                </com.facebook.shimmer.ShimmerFrameLayout>-->
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/request_recyclerview"
