--- a/app/src/main/res/layout/fragment_status_tab.xml
+++ b/app/src/main/res/layout/fragment_status_tab.xml
@@ -51,6 +51,10 @@
                                 app:met_textColor="@color/colorForgotPasswordHintText"
                                 app:met_textColorHint="@color/colorForgotPasswordHintText"/>
 
+                            <android.support.v7.widget.RecyclerView
+                                android:id="@+id/calendar_recycler_view"
+                                style="@style/MatchWrap"/>
+
                         </LinearLayout>
 
                         <android.support.design.widget.TabLayout
