--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,10 @@
     <color name="colorEulaMessage">#3f4950</color>
     <color name="colorWarningTitle">#424b4d</color>
     <color name="colorWarningMsg">#565656</color>
+    <color name="colorTab">#f44446</color>
+    <color name="colorcalendar">#eb1c24</color>
+    <!--// TODO hava to change test colore -->
+    <color name="alpha_corn_flower_red">#8842acf0</color>
 
     <color name="colorRegisterTypeUncheckedBorder">#62717a</color>
     <color name="colorVerifyBackground">#373737</color>
