--- a/app/src/main/res/drawable/bg_select_calender.xml
+++ b/app/src/main/res/drawable/bg_select_calender.xml
@@ -3,6 +3,8 @@
        android:padding="10dp"
        android:shape="rectangle">
 
-<solid android:color="#7e7e7e"/>
+    <solid android:color="#ffffff"/>
+    <corners android:radius="5dp"/>
+    <padding android:top="5dp"/>
 
 </shape>
