--- a/app/src/main/res/layout/fragment_status_tab.xml
+++ b/app/src/main/res/layout/fragment_status_tab.xml
@@ -51,9 +51,19 @@
                                 app:met_textColor="@color/colorForgotPasswordHintText"
                                 app:met_textColorHint="@color/colorForgotPasswordHintText"/>
 
-                            <android.support.v7.widget.RecyclerView
+                           <!-- <android.support.v7.widget.RecyclerView
+                                android:background="#eb1c24"
                                 android:id="@+id/calendar_recycler_view"
-                                style="@style/MatchWrap"/>
+                                style="@style/MatchWrap"/>-->
+
+                            <devs.mulham.horizontalcalendar.HorizontalCalendarView
+                                android:id="@+id/calendarView"
+                                style="@style/MatchWrap"
+                                android:background="@color/colorcalendar"
+                                app:selectorColor="@color/colorcalendar"
+                                app:selectedDateBackground="@drawable/bg_select_calender"
+                                app:sizeBottomText="14sp"
+                                app:sizeMiddleText="20sp"/>
 
                         </LinearLayout>
 
@@ -62,7 +72,7 @@
                             style="@style/MatchWrap"
                             android:layout_below="@+id/spinners_layout"
                             android:layout_gravity="fill"
-                            android:background="@color/colorPrimaryDark"
+                            android:background="@color/colorTab"
                             android:fillViewport="true"
                             android:minHeight="?attr/actionBarSize"
                             android:theme="@style/AppTheme"
