--- a/app/src/main/res/layout/item_new_request_fragment.xml
+++ b/app/src/main/res/layout/item_new_request_fragment.xml
@@ -105,6 +105,12 @@
                 android:text="@={fetchNewRequestResponse.product.modelNo}"
                 android:textColor="@color/ebony_clay"
                 android:textSize="10sp"/>
+            <!--Dummy view for showing selection-->
+            <ImageView
+                android:id="@+id/views_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/alpha_corn_flower_red" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </layout>
