--- a/app/src/main/res/layout/item_new_request_fragment.xml
+++ b/app/src/main/res/layout/item_new_request_fragment.xml
@@ -23,6 +23,11 @@
             android:id="@+id/layout_request_item"
             android:layout_width="match_parent"
             android:layout_height="120dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/margin_8">
             <!--brand image-->
             <ImageView
                 android:id="@+id/brand_imageview"
@@ -105,6 +110,8 @@
                 android:text="@={fetchNewRequestResponse.product.modelNo}"
                 android:textColor="@color/ebony_clay"
                 android:textSize="10sp"/>
+
+        </RelativeLayout>
             <!--Dummy view for showing selection-->
             <ImageView
                 android:id="@+id/views_layout"
