--- a/app/src/main/res/layout/item_repair_fragment.xml
+++ b/app/src/main/res/layout/item_repair_fragment.xml
@@ -20,6 +20,10 @@
             android:id="@+id/layout_request_item"
             android:layout_width="match_parent"
             android:layout_height="120dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/margin_8">
             <!--brand image-->
             <ImageView
                 android:id="@+id/brand_imageview"
@@ -105,6 +109,7 @@
                 android:layout_toRightOf="@id/product_imageview"
                 android:textColor="@color/ebony_clay"
                 android:textSize="12.4sp" />
+        </RelativeLayout>
             <!--Dummy view for showing selection-->
             <ImageView
                 android:id="@+id/views_layout"
